other/mutate-pod-binding/.chainsaw-test/pod-patched01.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foo: bar
  labels:
    app: busybox
  name: pod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
