other/mutate-pod-binding/.chainsaw-test/pod-patched02.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foo: bar
  labels:
    app: busybox
  name: pod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
