other/mutate-pod-binding/.chainsaw-test/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
  name: mypod
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    args:
    - sleep
    - 1d
    env:
    - name: FOO_NAME
      valueFrom:
        fieldRef:
          fieldPath: metadata.annotations['foo']
