other/mutate-pod-binding/.chainsaw-test/chainsaw-step-02-assert-1.yaml
apiVersion: v1
kind: Node
metadata:
  labels:
    foo: bar
