other/mutate-pod-binding/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: mutate-pod-binding
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: crb.yaml
    - script:
        content: |
          kubectl get configmap -n kyverno kyverno -o yaml | sed 's/\[Binding,\*,\*\]//g' - | sed 's/\[Pod\/binding,\*,\*\]//g' - | sed 's/\[Node\/\*,\*,\*\]//g' - | sed 's/\[Node,\*,\*\]//g' - | kubectl apply -f -
    - sleep:
        duration: 5s
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - assert:
        file: chainsaw-step-02-assert-1.yaml
  - name: step-03
    try:
    - apply:
        file: ../mutate-pod-binding.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-04
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod-patched01.yaml
    - assert:
        file: pod-patched02.yaml
  - name: step-05
    try:
    - script:
        content: |
          kubectl get configmap -n kyverno kyverno -o yaml | sed 's/\[SelfSubjectAccessReview,\*,\*\]/\[SelfSubjectAccessReview,\*,\*\] \[Binding,\*,\*\] \[Pod\/binding,\*,\*\]/g' - | sed 's/\[APIService,\*,\*\]/\[Node,\*,\*\] \[Node\/\*,\*,\*\] \[APIService,\*,\*\]/g' - | kubectl apply -f -
